breaze-backend/k8s/12-room-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-service
  namespace: breaze
spec:
  replicas: 1
  selector:
    matchLabels:
      app: room-service
  template:
    metadata:
      labels:
        app: room-service
    spec:
      containers:
        - name: room-service
          image: room-service:latest
          ports:
            - containerPort: 8082
