breaze-backend/k8s/14-room-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-postgres
  namespace: breaze
spec:
  replicas: 1
  selector:
    matchLabels:
      app: room-postgres
  template:
    metadata:
      labels:
        app: room-postgres
    spec:
      containers:
        - name: room-postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: room-postgres-pvc
