breaze-backend/k8s/17-booking-postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-postgres
  namespace: breaze
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-postgres
  template:
    metadata:
      labels:
        app: booking-postgres
    spec:
      containers:
        - name: booking-postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: booking-postgres-pvc
