breaze-backend/k8s/19-booking-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: breaze
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: booking-service:latest
          ports:
            - containerPort: 8083
