breaze-backend/k8s/08-auth-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres
  namespace: breaze
spec:
  selector:
    app: auth-postgres
  ports:
    - port: 5432
      targetPort: 5432
