breaze-backend/k8s/10-auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: breaze
spec:
  selector:
    app: auth-service
  ports:
    - port: 80
      targetPort: 8081
