breaze-backend/k8s/13-room-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: room-postgres
  namespace: breaze
spec:
  selector:
    app: room-postgres
  ports:
    - port: 5432
      targetPort: 5432
