breaze-backend/k8s/15-room-service.yml
apiVersion: v1
kind: Service
metadata:
  name: room-service
  namespace: breaze
spec:
  selector:
    app: room-service
  ports:
    - port: 80
      targetPort: 8082
