breaze-backend/k8s/18-booking-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: booking-postgres
  namespace: breaze
spec:
  selector:
    app: booking-postgres
  ports:
    - port: 5432
      targetPort: 5432
