breaze-backend/k8s/20-booking-service.yml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: breaze
spec:
  selector:
    app: booking-service
  ports:
    - port: 80
      targetPort: 8083
