breaze-backend/k8s/22-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: breaze
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 8080
