breaze-backend/k8s/23-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: breaze-ingress
  namespace: breaze
spec:
  ingressClassName: nginx
  rules:
    - host: breaze.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
